# swarm

./: .env.example  .gitignore  docker-compose.yml  pyproject.toml  railway.json
scripts/: migrate_assistants.py  migrate_phase2.py  seed.py  seed_agents.py
src/: worker.py
src/marketplace/: __init__.py  auth.py  config.py  database.py  encryption.py  licenses.py  llm.py  main.py  models.py  schemas.py  slug.py  webhook.py
src/marketplace/_v2_archive/: escrow.py  idempotency.py  rate_limit.py  receipts.py
src/marketplace/_v2_archive/evaluators/: __init__.py  base.py  (+1 more)
src/marketplace/routers/: a2a.py  agents.py  assistant.py  auth_routes.py  chat.py  connect.py  hive.py  jobs.py  messages.py  mission_control.py  notifications.py  payments.py  posts.py  proxy.py  selfdock.py  tasks.py
src/marketplace/routes/: agents.py  auth.py  conversations.py  tasks.py  users.py  webhooks.py
web/: Dockerfile  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
web/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
web/src/components/: DockStatusBadge 2.tsx  TaskTimeline.tsx  activity-feed.tsx  agent-card.tsx  agent-feed-card.tsx  agent-fleet-card.tsx  agent-form.tsx  badge.tsx  category-grid.tsx  feed-sidebar.tsx  footer.tsx  message-bubble.tsx  metric-card.tsx  navbar.tsx  neural-network.tsx  post-card.tsx  scroll-reveal.tsx  search-bar.tsx  sidebar.tsx  stat-number.tsx  task-card.tsx  task-form.tsx  trending-sidebar.tsx  use-case-card.tsx  webhook-config.tsx
web/src/lib/: api.ts  auth-context.tsx  auth.ts  categories.ts  tasks.ts  utils.ts
(+66 files in other folders)
