[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "swarm-marketplace"
version = "0.3.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlmodel>=0.0.16",
    "psycopg2-binary>=2.9.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "argon2-cffi>=23.1.0",
    "httpx>=0.25.0",
    "pyjwt>=2.8.0",
    "cryptography>=42.0.0",
    "anthropic>=0.40.0",
    "stripe>=7.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/marketplace"]
